maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	 	(getX() == 0 || getY() == maxy) || (getY() == 0 || getX() == max)}
                ^